[package]
name = "new-advent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Dependencies are all optimized
[dependencies]
chrono = { version = "0.4.31", default-features = false }
inquire = { version = "0.6.2", default-features = false, features = [
    "date",
    "crossterm",
] }
ureq = { version = "2.9.1", default-features = false, features = ["tls"] }

[profile.release]
strip = true # Automatically strip symbols from the binary

opt-level = "z" # Optimize for size/speed

#    0: no optimizations
#    1: basic optimizations
#    2: some optimizations
#    3: all optimizations
#    "s": optimize for binary size
#    "z": optimize for binary size, but also turn off loop vectorization.

lto = true        # Enable link time optimization
debug = false     # Controls the amount of debug information
codegen-units = 1 # Maximize speed and size reduction optimization
